attic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attic
spec:
  selector:
    matchLabels:
      app: attic
  template:
    metadata:
      labels:
        app: attic
    spec:
      containers:
      - name: attic
        image: ghcr.io/zhaofengli/attic:c4ffb5e86e928572e867bd3f81545293313e0a08
        volumeMounts:
        - name: attic-pvc
          mountPath: /var/empty
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
      volumes:
      - name: attic-pvc
        persistentVolumeClaim:
          claimName: attic-pvc
