attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic-svc
spec:
  type: ClusterIP
  selector:
    app: attic
  ports:
  - port: 8080
    targetPort: 8080
