attic/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attic
spec:
  parentRefs:
    - name: traefik
      sectionName: https
      kind: Gateway
  hostnames:
    - nix-cache.dubyatp.xyz
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: attic-svc
          port: 8080
